[project]
name = "daniel-earp-llm-zoomcamp-homeworks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "gitsource>=0.0.5",
    "minsearch>=0.1.0",
    "toyaikit>=0.0.11",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
